# job-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/ai/: __init__.py  client.py  cover_letter.py  keyword_matcher.py  matcher.py  pdf_generator.py  resume_parser.py  resume_tailor.py  skill_extractor.py
app/applicator/: __init__.py  browser.py
app/dashboard/: __init__.py  api.py  resume_builder.py
app/dashboard/static/css/: style.css
app/dashboard/static/js/: app.js
app/dashboard/templates/: applications.html  base.html  dashboard.html  job_detail.html  jobs.html  resume_builder.html  settings.html
app/database/: __init__.py  cleanup.py  engine.py  models.py
app/email_monitor/: __init__.py  classifier.py  gmail_client.py
app/notifications/: __init__.py  telegram_bot.py
app/scheduler/: __init__.py  jobs.py
app/scrapers/: __init__.py  ashby.py  base.py  dedup.py  greenhouse.py  indeed.py  lever.py  linkedin.py  remoteok.py  remotive.py  weworkremotely.py  ycombinator.py
tests/: __init__.py  conftest.py  test_cleanup.py  test_dedup.py  test_models.py  test_resume_builder.py  test_scrapers.py
